# netplanner

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  generate-proto.sh  netplanner.spec  pyoxidizer.bzl  pyproject.toml  sriov-example.yaml
.github/workflows/: python-prerelease.yml  python-release.yml  python-validate.yml
examples/: 5g-worker.yaml  first-try-master.yaml  first-try-worker.yaml  first-try.yaml  master-config-new.yaml  master-config-old.yaml  veth-trial.yaml  vm-config-v6.yaml  vm-config.yaml  worker-config-new.yaml  worker-config-old.yaml
examples/5g-worker/: 10-dum-cluster.yaml  50-bonds.yaml  50-bridges.yaml  50-dum-underlay.yaml  50-ethernets.yaml  50-vlans.yaml  50-vrfs.yaml  50-vxlans.yaml  99-dum-cluster.yaml
examples/vm-config/: 10-vm-config.yaml
mimir/: __main__.py  config.py  netplan.py  netplanner.py
mimir/frr/: client.py
mimir/frr/client/: frr_northbound_pb2.py  frr_northbound_pb2_grpc.py
mimir/interfaces/: base.py  match_object.py  typing.py
mimir/interfaces/l2/: bond.py  bridge.py  dummy.py  ethernet.py  vf.py  vlan.py  vrf.py  vxlan.py
mimir/interfaces/l3/: nameserver.py  route.py  routing_policy.py
mimir/objects/: base.py  bridge.py  ethernet.py  vf.py  vlan.py  vxlan.py
mimir/objects/l3/: route.py
mimir/providers/mimir/: templater.py
mimir/providers/networkd/: templater.py
mimir/providers/sriov/: templater.py
mimir/providers/templates/: eth2.network
mimir/sriov/: __main__.py  command.py  config.py  pci.py
mimir/sriov/files/: sriov-setup.service
mimir/templates/: 10-default.link  br-vxl10.netdev  eth1.network  tenant_vrf.netdev  vxl10.netdev  vxl10.network
netplanner/: __init__.py  __main__.py  config.py
netplanner/interfaces/: base.py  match_object.py  typing.py
netplanner/interfaces/l2/: bond.py  bridge.py  dummy.py  ethernet.py  veth.py  vlan.py  vrf.py  vxlan.py
netplanner/interfaces/l3/: nameserver.py  route.py  routing_policy.py
netplanner/loader/: config.py  templates.py  util.py
netplanner/providers/networkd/: provider.py  templater.py
netplanner/sriov/: __main__.py  command.py  config.py  pci.py
templates/: br-vxl10.netdev  br-vxl10.network  eth0.network  lo.network  tenant_vrf.network
(+49 files in other folders)
